--- a/src/content/posts/2024-08-26-1/如何搭建一个博客.md
+++ b/src/content/posts/2024-08-26-1/如何搭建一个博客.md
@@ -35,4 +35,5 @@ B站上有一位大佬讲的更专业一点
 3. 能用的Gmail或者其他国外邮箱
 
 :::caution
-自打开Netlify，你需要全程处在科学上网的状态，你的Netlify否则会被封禁（Netlify）
+自打开Netlify，你需要全程处在科学上网的状态，否则你的Netlify会被封禁
+:::
