--- a/src/content/posts/2024-08-26-1/如何搭建一个博客.md
+++ b/src/content/posts/2024-08-26-1/如何搭建一个博客.md
@@ -1,8 +1,8 @@
 ---
 title: 使用Astro+Gitub+Netlify搭建个人博客
 published: 2024-08-26
-description: ''
-image: '授之以渔'
+description: '授之以渔'
+image: ''
 tags: [搭建博客]
 category: '输出'
 draft: false 
