--- a/src/content/posts/2024-08-26-1/如何搭建一个博客.md
+++ b/src/content/posts/2024-08-26-1/如何搭建一个博客.md
@@ -16,10 +16,10 @@ draft: false
 :::tip
 1. 静态网页源文件——Astro是静态网页的每个部分的零件
 2. 源文件托管平台——你可以把Github当作一个云盘，可以存放你的网页 源文件（这样你就不用24小时都开着你的电脑以供访问了☺）
-3. 远在他乡的网站服务器——Netlify公司负责读取你放在Github仓库里的网页源文件，并把你的网页部署在网络上（全世界都可以访问）
+3. 远在他乡的网站服务器——Netlify公司负责读取你放在Github仓库里的网页源文件，并把你的网页部署在网络上
 :::
 
-B站上有一位大佬讲的更专业一点
+此处有传送门
 ## Bilibili
 
 <iframe src="//player.bilibili.com/player.html?isOutside=true&aid=729827798&bvid=BV1qD4y1z783&cid=811525188&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
@@ -35,5 +35,5 @@ B站上有一位大佬讲的更专业一点
 3. 能用的Gmail或者其他国外邮箱
 
 :::caution
-自打开Netlify，你需要全程处在科学上网的状态，否则你的Netlify会被封禁
+只要你有打开的Netlify网页，你需要全程处在科学上网的状态，否则你的Netlify账号会被立马封禁！！！
 :::
