--- a/src/content/posts/2024-08-26-1/如何搭建一个博客.md
+++ b/src/content/posts/2024-08-26-1/如何搭建一个博客.md
@@ -1,7 +1,7 @@
 ---
-title: 使用 Astro+Gitub+Netlify 搭建个人博客
+title: 使用 Astro + Gitub + Netlify 搭建个人博客
 published: 2024-08-26
-description: '希望能解决您对搭建博客的疑惑'
+description: '无需购买服务器，本文将让你拥有自己的博客网站'
 image: './setting.png'
 tags: [搭建博客]
 category: '输出'
