--- a/src/content/posts/2024-08-26-1/如何搭建一个博客.md
+++ b/src/content/posts/2024-08-26-1/如何搭建一个博客.md
@@ -4,7 +4,7 @@ published: 2024-08-26
 description: '无需购买服务器，本文将让你拥有自己的博客网站'
 image: './setting.png'
 tags: [搭建博客]
-category: '输出'
+category: '教程'
 draft: false 
 ---
 
