--- a/src/content/posts/2024-08-26-1/如何搭建一个博客.md
+++ b/src/content/posts/2024-08-26-1/如何搭建一个博客.md
@@ -33,7 +33,24 @@ draft: false
 1. 科学上网
 2. Github账号
 3. 能用的Gmail或者其他国外邮箱
+4. Node.js - v18.17.1 或 v20.3.0 或更高版本。（不支持 v19）
+5. 文本编辑器 - 推荐使用 VS Code
 
 :::caution
 只要你有打开的Netlify网页，你需要全程处在科学上网的状态，否则你的Netlify账号会被立马封禁！！！
+:::
+
+## 验证Node.js版本
+
+    node -v
+
+    // 输出示例
+    v18.17.1
+如果该命令返回的版本号高于 v18.17.1 或 v20.3.0（不包括任何 v19 版本），那么你就可以继续了！
+
+如果命令返回错误信息如 Command 'node' not found，或者版本号低于所需版本，那么你需要安装兼容的 Node.js 版本。
+
+### 代码编辑器
+:::note[我们将用到...]
+[Visual Studio Code](https://code.visualstudio.com/)(简称_VScode)
 :::
