图片超链接

--- a/src/content/posts/2024-08-26-1/如何搭建一个博客.md
+++ b/src/content/posts/2024-08-26-1/如何搭建一个博客.md
@@ -31,9 +31,9 @@ draft: false
 # 你需要准备什么？
 
 1. 科学上网
-2. Github账号
+2. [Github](https://github.com/)账号
 3. 能用的Gmail或者其他国外邮箱
-4. Node.js - v18.17.1 或 v20.3.0 或更高版本。（不支持 v19）
+4. [Node.js](https://nodejs.org/) - v18.17.1 或 v20.3.0 或更高版本。（不支持 v19）
 5. 文本编辑器 - 推荐使用 VS Code
 
 :::caution
@@ -53,4 +53,12 @@ draft: false
 ### 代码编辑器
 :::note[我们将用到...]
 [Visual Studio Code](https://code.visualstudio.com/)(简称_VScode)
+:::
+
+#### 正文
+
+1. 在[Astro官网](https://astro.build/themes/)中选择自己喜欢的主题
+:::tip
+[![Astro主题页](./2.png)](https://astro.build/themes/)
+在左侧Filter栏中，Categories勾选Blog，Pricing勾选free(有Doller的朋友可以不选)
 :::
