--- a/src/content/posts/2024-08-26-1/如何搭建一个博客.md
+++ b/src/content/posts/2024-08-26-1/如何搭建一个博客.md
@@ -52,7 +52,7 @@ draft: false
 
 ### 代码编辑器
 :::note[我们将用到...]
-[Visual Studio Code](https://code.visualstudio.com/)(简称_VScode)
+[Visual Studio Code](https://code.visualstudio.com/)(简称VScode)
 :::
 
 #### 正文
