--- a/src/content/posts/2024-08-26-1/如何搭建一个博客.md
+++ b/src/content/posts/2024-08-26-1/如何搭建一个博客.md
@@ -59,6 +59,6 @@ draft: false
 
 1. 在[Astro官网](https://astro.build/themes/)中选择自己喜欢的主题
 :::tip
-[![Astro主题页](./2.png)](https://astro.build/themes/)
+![Astro主题页](./2.png)
 在左侧Filter栏中，Categories勾选Blog，Pricing勾选free(有Doller的朋友可以不选)
 :::
