--- a/src/content/posts/2024-08-26-1/如何搭建一个博客.md
+++ b/src/content/posts/2024-08-26-1/如何搭建一个博客.md
@@ -62,3 +62,12 @@ draft: false
 ![Astro主题页](./2.png)
 在左侧Filter栏中，Categories勾选Blog，Pricing勾选free(有Doller的朋友可以不选)
 :::
+
+2. 找到喜欢的主题后点进去，在右侧这一栏中可以找到_Deploy to Netlify_的字样
+:::warning
+科学上网
+:::
+![Netlify](./3.png)
+在点Start之前，我们打开[Github](https://github.com/)
+![Github](./4.png)
+填写自己的邮箱后点击_Sign up for Github_
