--- a/src/content/posts/2024-08-26-1/如何搭建一个博客.md
+++ b/src/content/posts/2024-08-26-1/如何搭建一个博客.md
@@ -54,8 +54,8 @@ draft: false
 :::note[我们将用到...]
 [Visual Studio Code](https://code.visualstudio.com/)(简称VScode)
 :::
-
-#### 正文
+---
+### 正文
 
 1. 在[Astro官网](https://astro.build/themes/)中选择自己喜欢的主题
 :::tip
@@ -65,9 +65,10 @@ draft: false
 
 2. 找到喜欢的主题后点进去，在右侧这一栏中可以找到_Deploy to Netlify_的字样
 :::warning
-科学上网
+从此处-科学上网
 :::
 ![Netlify](./3.png)
-在点Start之前，我们打开[Github](https://github.com/)
+在点Connect to Github之前，我们打开[Github](https://github.com/)
+
 ![Github](./4.png)
-填写自己的邮箱后点击_Sign up for Github_
+填写自己的邮箱后点击*Sign up for Github*
