--- a/src/content/posts/2024-08-26-1/如何搭建一个博客.md
+++ b/src/content/posts/2024-08-26-1/如何搭建一个博客.md
@@ -68,7 +68,16 @@ draft: false
 从此处-科学上网
 :::
 ![Netlify](./3.png)
-在点Connect to Github之前，我们打开[Github](https://github.com/)
+在点*Connect to Github*之前，我们打开[Github](https://github.com/)
 
 ![Github](./4.png)
-填写自己的邮箱后点击*Sign up for Github*
+填写自己的邮箱后点击 *Sign up for Github*
+按照Github官方的引导，你已经成功拥有了一个GitHub账号
+让我们进入Github页面，点击 绿色的 *New* 创建一个新仓库
+名字自己起就好啦，其他的设置我们可以不动它
+一起准备就绪，点击 *Create repository*
+现在你已经成功拥有一个Github代码仓库用于储存你的博客网页源代码
+---
+### 再次回到Netlify的网页
+可以 *Connect to Github* 了
+加载后，点击对应的仓库，Netlify会自动把仓库当成储存位置，再进行部署网站的操作
