--- a/src/content/posts/2024-08-26-1/如何搭建一个博客.md
+++ b/src/content/posts/2024-08-26-1/如何搭建一个博客.md
@@ -40,6 +40,11 @@ draft: false
 只要你有打开的Netlify网页，你需要全程处在科学上网的状态，否则你的Netlify账号会被立马封禁！！！
 :::
 
+# 你将学会什么？
+1. 部署简洁的静态网页作为博客网站
+2. 学会域名的DNS转发解析
+3. 学会使用Cloudflare的CDN加速服务
+---
 ## 验证Node.js版本
 
     node -v
@@ -80,4 +85,13 @@ draft: false
 ---
 ### 再次回到Netlify的网页
 可以 *Connect to Github* 了
-加载后，点击对应的仓库，Netlify会自动把仓库当成储存位置，再进行部署网站的操作
+加载后，点击对应的仓库，Netlify会选中此仓库，再部署博客网站
+等待些许时间后点击*Save&Deploy*
+跳转至一下界面
+![Netlify](./5.png)
+![Netlify](./6.png)
+如果你看到这四个*Completed*那就代表网站已经搭建成功了，现在你可以亲自看看自己的博客了，步骤如下：
+1. 点击左侧栏中的Site overview
+2. 找到青色的*https://*********.netlify.app*
+
+看到自己亲手部署的博客，证明你已经拥有了一个值得炫耀的网站
