--- a/src/content/posts/2024-08-26-1/如何搭建一个博客.md
+++ b/src/content/posts/2024-08-26-1/如何搭建一个博客.md
@@ -72,27 +72,32 @@ draft: false
 :::warning
 从此处-科学上网
 :::
+
 ![Netlify](./3.png)
+
 在点*Connect to Github*之前，我们打开[Github](https://github.com/)
 
 ![Github](./4.png)
 
 填写自己的邮箱后点击 *Sign up for Github*
-按照Github官方的引导，你已经成功拥有了一个GitHub账号
+
+按照Github官方的引导，你已经成功拥有了一个GitHub账号。
 让我们进入Github页面，点击 绿色的 *New* 创建一个新仓库
-名字自己起就好啦，其他的设置我们可以不动它
-一起准备就绪，点击 *Create repository*
+
+名字自己起就好啦，其他的设置我们可以不动它。
+一切准备就绪，点击 *Create repository*
+
 现在你已经成功拥有一个Github代码仓库用于储存你的博客网页源代码
 ---
 ### 再次回到Netlify的网页
 可以 *Connect to Github* 了
 加载后，点击对应的仓库，Netlify会选中此仓库，再部署博客网站
-等待些许时间后点击*Save&Deploy*
+等待些许时间后点击 *Save&Deploy*
 跳转至一下界面
 ![Netlify](./5.png)
 ![Netlify](./6.png)
-如果你看到这四个*Completed*那就代表网站已经搭建成功了，现在你可以亲自看看自己的博客了，步骤如下：
+如果你看到这四个 *Completed* 那就代表网站已经搭建成功了，现在你可以亲自看看自己的博客了，步骤如下：
 1. 点击左侧栏中的Site overview
-2. 找到青色的*https://*********.netlify.app*
+2. 找到 *https://*********.netlify.app* 并点击它
 
 看到自己亲手部署的博客，证明你已经拥有了一个值得炫耀的网站
