--- a/src/content/posts/2024-08-26-1/简易版-如何搭建一个博客.md
+++ b/src/content/posts/2024-08-26-1/简易版-如何搭建一个博客.md
@@ -1,5 +1,5 @@
 ---
-title: 使用 Astro + Gitub + Netlify 搭建个人博客
+title: 简单易上手-使用 Astro + Gitub + Netlify 搭建个人博客
 published: 2024-08-26
 description: '无需购买服务器，本文将让你拥有自己的博客网站'
 image: './setting.png'
@@ -100,4 +100,70 @@ draft: false
 1. 点击左侧栏中的Site overview
 2. 找到 *https://*********.netlify.app* 并点击它
 
-看到自己亲手部署的博客，证明你已经拥有了一个值得炫耀的网站
+当你看到自己亲手部署的博客，证明你已经拥有了一个值得炫耀的网站
+---
+### 绑定域名（需要到阿里云或腾讯云上购买域名）
+这里以阿里云的域名为例为例，在Netlify左栏中点击Domain management-Add domain alias
+
+输入自己的域名，确认
+
+此时我们再回到阿里云控制台，找到域名的DNS解析，添加解析
+
+因为我们这里要用转发解析，所以填写两条解析内容：
+    记录类型：CNAME
+    主机记录：www
+    记录值：填写上述的 *https://*********.netlify.app* 
+    解析路线：默认
+    TTL：10分钟
+
+    记录类型：CNAME
+    主机记录：@
+    记录值：填写上述的 *https://*********.netlify.app* 
+    解析路线：默认
+    TTL:10分钟
+
+然后我们回到Netlify的网页，在Domain management处为自己的域名添加Netlify DNS解析（非必要性）
+
+不出意外的话，等一会就可以通过域名访问自己的博客了
+
+但是现在有一个问题，博客网站加载的很慢，我们需要为它添加CDN解析
+
+### 配置[Cloudflare](https://www.cloudflare-cn.com/)
+ 1. 我们搜索并进入[Cloudflare](https://www.cloudflare-cn.com/)官网，为自己注册一个账号,选择免费的方案
+跟着向导走，填写好自己的域名(domain name)
+2. 也为Cloudflare添加DNS解析，实现Cloudflare与Netlify的握手，如下图所示
+![Clouflare](./7.png)
+3. 在这个网页中，往下翻，找到Cloudflare Nameservers
+
+看到两条NS信息，将它们记下，打开阿里云域名控制台-管理-DNS修改-修改DNS服务器，将原来的两条替换成我们记下的两条NS，保存。
+
+修改后的DNS有生效缓冲时间，请等待Cloudflare的邮件，他们会告知你网站CDN加速已经配置完成，通常需要等待数小时。
+至此，Cloudflare配置完毕
+
+好了，大功告成
+
+### 如何写博文，并推送到Github和网页？
+这里我们就要用到VScode，在左侧栏中点击源代码管理（当鼠标停留在图标上时，就会显示对应的名称）
+
+你可以选择连接远程储存库，在顶部弹出的对话框中填入自己的仓库地址
+:::note
+如何查看自己仓库的地址？
+1. 打开Github，找到自己存放网站的仓库
+2. 进入仓库，点击右上方绿色 *Code* 
+3. 复制.git结尾的地址
+:::
+
+等待后，你就可以在VScode中查看网站源文件了
+文件结构通常是这样的
+![9](./9.png)
+我们写的博客都存放在src/content/posts ，文件格式是.md
+为了方便在博文中引用图片，我建议在posts文件夹中再建立文件夹以存放单篇博文和它所引用的图片
+
+所引用的图片地址只需填写./某.png 或 ./某.jpg
+
+
+### 常见问题
+1. 写完博客commit到Github仓库后，发现Netlify在Build时报错
+
+其实原因很简单，你写的.md文件有语法错误，导致无法渲染成为网站，快快检查你的博文有没有语法错误，[此处链接Markdown语法速查表](https://markdown.com.cn/basic-syntax/)
+
