--- a/src/content/posts/2024-08-29/常用工具.md
+++ b/src/content/posts/2024-08-29/常用工具.md
@@ -8,12 +8,13 @@ draft: false
 
 1. Office部署&激活工具
 
-【超级会员V3】通过百度网盘分享的文件：HEU_KMS_Activator_v42.1.0.zip
+HEU_KMS_Activator_v42.1.0.zip
 链接：https://pan.baidu.com/s/1IKMV_xV6232MdmcysZZf9w?pwd=h82s 
 提取码：h82s
 
 2. Office&Windows激活工具
-【超级会员V3】通过百度网盘分享的文件：Office Tool office部署工具.zip
+
+Office Tool office部署工具.zip
 链接：https://pan.baidu.com/s/157Tm47irijbmWwpSjEqdNQ?pwd=h82s 
 提取码：h82s
 
