--- a/src/content/posts/2024-08-26-1/简易版-如何搭建一个博客.md
+++ b/src/content/posts/2024-08-26-1/简易版-如何搭建一个博客.md
@@ -159,9 +159,10 @@ draft: false
 文件结构通常是这样的
 ![9](./9.png)
 我们写的博客都存放在src/content/posts ，文件格式是.md
-为了方便在博文中引用图片，我建议在posts文件夹中再建立文件夹以存放单篇博文和它所引用的图片
+为了方便在博文中引用图片，建议在posts文件夹中再建立文件夹以存放单篇博文和它所引用的图片
 
 所引用的图片地址只需填写./某.png 或 ./某.jpg
+
 ---
 ### 常见问题
 1. 写完博客commit到Github仓库后，发现Netlify在Build时报错
