--- a/src/content/posts/2024-08-26-1/简易版-如何搭建一个博客.md
+++ b/src/content/posts/2024-08-26-1/简易版-如何搭建一个博客.md
@@ -88,20 +88,27 @@ draft: false
 一切准备就绪，点击 *Create repository*
 
 现在你已经成功拥有一个Github代码仓库用于储存你的博客网页源代码
+
 ---
-### 再次回到Netlify的网页
-可以 *Connect to Github* 了
+
+### 回到Netlify的网页
+*Connect to Github* 
+
 加载后，点击对应的仓库，Netlify会选中此仓库，再部署博客网站
-等待些许时间后点击 *Save&Deploy*
-跳转至一下界面
+
+等待后点击 *Save&Deploy*
+
+跳转至此界面
 ![Netlify](./5.png)
 ![Netlify](./6.png)
-如果你看到这四个 *Completed* 那就代表网站已经搭建成功了，现在你可以亲自看看自己的博客了，步骤如下：
+如果你看到这四个 *Completed* 那就代表网站已经搭建成功了，现在你可以亲自看到自己的博客了，步骤如下：
 1. 点击左侧栏中的Site overview
 2. 找到 *https://*********.netlify.app* 并点击它
 
 当你看到自己亲手部署的博客，证明你已经拥有了一个值得炫耀的网站
+
 ---
+
 ### 绑定域名（需要到阿里云或腾讯云上购买域名）
 这里以阿里云的域名为例为例，在Netlify左栏中点击Domain management-Add domain alias
 
@@ -125,7 +132,7 @@ draft: false
 
 然后我们回到Netlify的网页，在Domain management处为自己的域名添加Netlify DNS解析（非必要性）
 
-不出意外的话，等一会就可以通过域名访问自己的博客了
+若不出意外，等一会就可以通过域名访问自己的博客了
 
 但是现在有一个问题，博客网站加载的很慢，我们需要为它添加CDN解析
 
